add math typesetting

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -27,3 +27,8 @@
 
   <link rel="icon" type="image/png" href="{{ $favicon }}" />
 {{end}}
+
+<!--================= math-typesetting ===================-->
+{{ if .Params.math }}
+  {{ partial "helpers/add-math-typesetting.html" . }}
+{{ end }}
